refactor: emptyList -> List.of 로 변경